# attila

./: .gdb_history  AUTHORS  ChangeLog  Copyright  Makefile.am  NEWS  README  SVNTAGS  TODO  abort.fs  ans-locals.fs  arithmetic.c  ascii.fs  attila.c  attila.h  attila.html  attila.texi  base.fs  bootattila.c  bootstrap  bootstrap-loops.fs  bootstrap-prelude.fs  bootstrap-vm.fs.in  bootstrap.c  bootstrap.fs  bootstrap.h  bootstrapping.c  build-bootstrap.sh  build-bootstrap.sh.in  c-continuations-runtime.fs  c-core.fs  c-dl.fs  c-ffi.fs  c-fileio.fs  c-flat-memory-model-runtime.fs  c-image-fixedsize.fs  c-io.fs  c-itil.fs  c-socket.fs  c.fs  (+104 more)
.deps/: arithmetic.Po  attila.Po  bootstrap.Po  bootstrapping.Po  dictionary.Po  initial.Po  interactive.Po  memory.Po  stack.Po  util.Po  vm.Po  vocabulary.Po
assembler/: msp430.fs
cross-compiler/: cross-c-generate.fs  cross-c-vm.fs  cross-c.fs  cross-colon.fs  cross-compiler.fs  cross-cs.fs  cross-environments.fs  cross-flat-memory-model.fs  cross-generate.fs  cross-image-fixedsize.fs  cross-initialisation.fs  cross-locator.fs  cross-primitives.fs  cross-target.fs  cross-vm.fs  x-standard.fs
doc/: attila.bib  attila.tex  compiler.tex  cross-compiler.tex  introduction.tex  prelude.tex  words.sty
examples/sudoku/: check-sudoku.fs  read-sudoku.fs  solve-sudoku.fs  sudoku.fs
examples/sudoku/test/: 1.sudoku  2.sudoku  3.sudoku  sudoku.fs
stdc/: stdc-core.fs  stdc-dot.fs  stdc-fileio.fs  stdc-itil.fs  stdc-main.h  stdc-millis.fs  stdc-runtime-standard.h  stdc-segment.fs  stdc-stacks-bare.h  stdc-stacks-protected.h  stdc-types-standard.h
test/: allot.fs  arithmetic.fs  ascii.fs  chains.fs  conditional-compilation.fs  continuations.fs  core-system-tests.fs  dbltest.fs  evaluate.fs  formatting.fs  funit.fs  hooks.fs  loops.fs  parser.fs  records.fs  ring.fs  smallsets.fs  stack.fs  strings.fs  words.fs
tools/: crosscompile.fs  crosscompile.fs.in  primgen  test.fs
